# socksprox

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
src/: errors.rs  lib.rs  main.rs  socks_msgs.rs
tests/: README.md  client.py  echo.py  main.py
