[package]
name = "socksprox"
version = "0.1.1"
edition = "2021"
description = "Simple SOCKS5 Proxy Server in Rust. Probably shouldn't use this, but you can."
license = "MIT"
repository = "https://github.com/carterburn/socksprox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
derive-try-from-primitive = "1.0.0"
derive_more = "0.99.17"
env_logger = "0.11.1"
log = "0.4.20"
nom = "7.1.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["net", "rt", "io-util", "time",
"sync", "full"] }
